transform GLUE: only GPU, do not transform sentences with too many words.

--- a/src/textflint.ipynb
+++ b/src/textflint.ipynb
@@ -454,13 +454,453 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(dataset['validation'])\n",
+    "transform_back(\n",
+    "    '/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QNLI/DATA_TRAIN/trans_Pipeline_SpellingError_Typos_random_104741.json',\n",
+    "    '/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QNLI/qnli_train_textflint.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T16:26:11.256541Z",
+     "start_time": "2025-01-07T16:26:10.585054Z"
+    }
+   },
+   "id": "1d4c6df33065b972"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# MNLI"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b236154b1b333a9b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "train-00000-of-00001.parquet:   0%|          | 0.00/52.2M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "146bb9a575a24f379cb369656812e02f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "(…)alidation_matched-00000-of-00001.parquet:   0%|          | 0.00/1.21M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b16a6d6faa4e408d9d07ecc3d1189f8c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "(…)dation_mismatched-00000-of-00001.parquet:   0%|          | 0.00/1.25M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cb66b545b7b34fd5b1d76ba315841d48"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "test_matched-00000-of-00001.parquet:   0%|          | 0.00/1.22M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "702f56fd94e34da29119152376ff9267"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "test_mismatched-00000-of-00001.parquet:   0%|          | 0.00/1.26M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e96daab41ed84e11914fbe6ac2bdc591"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating train split:   0%|          | 0/392702 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8ce3120e05884f11a8341367b27d634a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating validation_matched split:   0%|          | 0/9815 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "44c7a2081ac443b193a1ce94a1d2fa1f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating validation_mismatched split:   0%|          | 0/9832 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "978d60cd71114133a8350d48c4930b3c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating test_matched split:   0%|          | 0/9796 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "608b5d6d6a9247088939e066938a537a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating test_mismatched split:   0%|          | 0/9847 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "42bdf12653d64422b8af0294c69b9147"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/392702 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "31e83f19990344fba2094cdbf1071701"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/392702 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "08d23f1294a8459fa8d1636881bf1586"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/392702 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "79e68de9c84e49139e546e778e57b73c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/9815 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1387ace2b69e49deb5307b9cb124f439"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/9815 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "09fbee105c874e768b053d3bee597a81"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/9815 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "861b457cc0b24e89a02e8d2ad01ce884"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/9832 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "309dba326c384386af67f7c182ab329e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/9832 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "f4085d7046064050b0942076894399d9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/9832 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "76753159b3de44fead6ab2e9f5516e6e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/9796 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "94ad5743b88c467a87a068ec0658a27c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/9796 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6a79be82f92046d6a8540ea2d598ce83"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/9796 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7d4c4f75b2b649fbbbf93708e53a5f89"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/9847 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e201f3db659e4815967c0da562abaa46"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/9847 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9d7d299ef4ce42a0a087c1f6be0178c3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/9847 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "05ecaa284d2f46409ca050edcac35e94"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Creating CSV from Arrow format:   0%|          | 0/393 [00:00<?, ?ba/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "38a978e5e7b448a89e84e931a2672cc5"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Creating CSV from Arrow format:   0%|          | 0/10 [00:00<?, ?ba/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "855eb7930f8e4ad2828366721579302a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Creating CSV from Arrow format:   0%|          | 0/10 [00:00<?, ?ba/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "eaa1d1df2aa94ec7a898cbe8e83142f7"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "1944084"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "dataset = load_dataset(\"glue\", \"mnli\")\n",
+    "from datasets import Features, Value\n",
+    "# Cast the label column to a string feature\n",
+    "for split in dataset.keys():\n",
+    "    dataset[split] = dataset[split].cast(\n",
+    "        Features({**dataset[split].features, \"label\": Value(\"string\")})\n",
+    "    )\n",
+    "    dataset[split] = dataset[split].map(\n",
+    "        lambda x: {\n",
+    "            \"label\":\n",
+    "                \"entailment\"\n",
+    "                if x[\"label\"] == \"0\"\n",
+    "                else \"contradiction\"\n",
+    "                if x[\"label\"] == \"2\"\n",
+    "                else \"neutral\"\n",
+    "                if x[\"label\"] == \"1\"\n",
+    "                else x[\"label\"]\n",
+    "        }\n",
+    "    )\n",
+    "    # expects 'NLI': ['premise', 'hypothesis'], y instead of question, sentence, label\n",
+    "    dataset[split] = dataset[split].rename_column('label', 'y')\n",
+    "\n",
+    "    # remoe elements where y is -1\n",
+    "    dataset[split] = dataset[split].filter(lambda example: example[\"y\"] != -1)\n",
+    "\n",
+    "dataset['train'].to_csv('../data/GLUE_textflint/mnli_train.csv')\n",
+    "dataset['validation_matched'].to_csv('../data/GLUE_textflint/mnli_validation-matched.csv')\n",
+    "dataset['validation_mismatched'].to_csv('../data/GLUE_textflint/mnli_validation-mismatched.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T16:31:31.727265Z",
+     "start_time": "2025-01-07T16:31:15.710957Z"
+    }
+   },
+   "id": "1ea0d3158c4c004a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_VAL_MATCH"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4f19806064e70c82"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# QQP"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9adb5d747cb3ebc6"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "1d4c6df33065b972"
+   "id": "339ca5950b850a24"
   }
  ],
  "metadata": {
