--- a/src/textflint.ipynb
+++ b/src/textflint.ipynb
@@ -872,15 +872,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
-    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_VAL_MATCH"
+    "def transform_back(file_path, out_path):\n",
+    "    import json\n",
+    "    data = []\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            # Strip whitespace and parse the JSON object\n",
+    "            d = json.loads(line.strip())\n",
+    "            data.append(d)\n",
+    "\n",
+    "    import pandas as pd\n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    df = df.rename(columns={\"y\": \"label\"})\n",
+    "\n",
+    "    df.to_csv(out_path)  # \"../data/GLUE_textflint/sst2_dev_textflint.csv\""
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:04:38.906866Z",
+     "start_time": "2025-01-07T17:04:38.901142Z"
+    }
+   },
+   "id": "c9e29e4096128e15"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    },
+   "id": "3816b61525ef0ac4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_TRAIN/trans_Pipeline_SpellingError_Typos_random_391466.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/mnli_train_textflint.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:04:42.511973Z",
+     "start_time": "2025-01-07T17:04:40.638156Z"
+    }
+   },
    "id": "4f19806064e70c82"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_VAL-MATCHED/trans_Pipeline_SpellingError_Typos_random_9779.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/mnli_val_matched_textflint.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:04:43.959607Z",
+     "start_time": "2025-01-07T17:04:43.909910Z"
+    }
+   },
+   "id": "9140703b951566"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_VAL-MISMATCHED/trans_Pipeline_SpellingError_Typos_random_9813.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/mnli_val_mismatched_textflint.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:05:31.901483Z",
+     "start_time": "2025-01-07T17:05:31.839268Z"
+    }
+   },
+   "id": "355714bc4aa6b772"
   },
   {
    "cell_type": "markdown",
@@ -894,13 +968,330 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "train-00000-of-00001.parquet:   0%|          | 0.00/33.6M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "647d3816bff54a05ad3c538e86f46ee1"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "validation-00000-of-00001.parquet:   0%|          | 0.00/3.73M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "07776c4f20754e318ef1b2bfc2536564"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "test-00000-of-00001.parquet:   0%|          | 0.00/36.7M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "bfbbea8828824ee5a9668e1ff7824470"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating train split:   0%|          | 0/363846 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "119421bd79f840808e99a4ce740d8a65"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating validation split:   0%|          | 0/40430 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fa5a8d7c7b5c4aa9b2ec6d46b6c87b97"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Generating test split:   0%|          | 0/390965 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "0f811c681843407e9e49329153857b9b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/363846 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "aab807f922f34dac812c0906093614a4"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/363846 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "3e68ebb5d96b4a6f9751cc1e6056112d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/363846 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b1b86aa9d50f45ef97a38fcc8b42d6fc"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/40430 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "eb9f6d38ab5c4b8bbd49df5cc0b8f31c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/40430 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "79178fd6f48b425db00559c709718b00"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/40430 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "eebbac87bf9542cca297a042a692e935"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/390965 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2b6cb2b80bda46cb82815e44c9d980f9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Map:   0%|          | 0/390965 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ec940cf2bf83445599e04372fef66f9f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Filter:   0%|          | 0/390965 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "970b7f62e1b2488891a89ed9b697131d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Creating CSV from Arrow format:   0%|          | 0/364 [00:00<?, ?ba/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "784dcb8729b047e9a7b5719e4164bcd7"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Creating CSV from Arrow format:   0%|          | 0/41 [00:00<?, ?ba/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a3074ec759044b60bdaa08e688ae6d38"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "5553174"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "dataset = load_dataset(\"glue\", \"qqp\")\n",
+    "from datasets import Features, Value\n",
+    "# Cast the label column to a string feature\n",
+    "for split in dataset.keys():\n",
+    "    dataset[split] = dataset[split].cast(\n",
+    "        Features({**dataset[split].features, \"label\": Value(\"string\")})\n",
+    "    )\n",
+    "    dataset[split] = dataset[split].map(\n",
+    "        lambda x: {\n",
+    "            \"label\":\n",
+    "                \"neutral\"\n",
+    "                if x[\"label\"] == \"0\"\n",
+    "                else \"entailment\"\n",
+    "                if x[\"label\"] == \"1\"\n",
+    "                else x[\"label\"]\n",
+    "        }\n",
+    "    )\n",
+    "    # expects 'NLI': ['premise', 'hypothesis'], y instead of question, sentence, label\n",
+    "    dataset[split] = dataset[split].rename_column('label', 'y').rename_column('question1', 'premise').rename_column('question2', 'hypothesis')\n",
+    "\n",
+    "    # remove elements where y is -1\n",
+    "    dataset[split] = dataset[split].filter(lambda example: example[\"y\"] != -1)\n",
+    "\n",
+    "dataset['train'].to_csv('../data/GLUE_textflint/qqp_train.csv')\n",
+    "dataset['validation'].to_csv('../data/GLUE_textflint/qqp_validation.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:09:52.001394Z",
+     "start_time": "2025-01-07T17:09:30.791362Z"
+    }
+   },
+   "id": "339ca5950b850a24"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def transform_back(file_path, out_path):\n",
+    "    import json\n",
+    "    data = []\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            # Strip whitespace and parse the JSON object\n",
+    "            d = json.loads(line.strip())\n",
+    "            data.append(d)\n",
+    "\n",
+    "    import pandas as pd\n",
+    "    df = pd.DataFrame(data)\n",
+    "\n",
+    "    df = df.rename(columns={\"premise\": \"question1\", \"hypothesis\": \"question2\", \"y\": \"label\"})\n",
+    "    \n",
+    "    df['label'] = df['label'].apply(\n",
+    "        lambda x: '0' if x == 'neutral' else '1' if x == 'entailment' else x\n",
+    "    )\n",
+    "\n",
+    "    df.to_csv(out_path) \n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7a77e193d4b679e9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QQP/DATA_TRAIN/trans_Pipeline_SpellingError_Typos_random_363477.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QQP/qqp_train_textflint.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:17:03.345029Z",
+     "start_time": "2025-01-07T17:17:02.002736Z"
+    }
+   },
+   "id": "8a34b76a89a1a6c9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QQP/DATA_VALIDATION/trans_Pipeline_SpellingError_Typos_random_40385.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QQP/qqp_val_textflint.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-07T17:17:41.646094Z",
+     "start_time": "2025-01-07T17:17:41.507235Z"
+    }
+   },
+   "id": "75307dfe62d699eb"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "339ca5950b850a24"
+   "id": "b9ed6a7e3fab599f"
   }
  ],
  "metadata": {
