GLUE: try again for textflint

--- a/src/textflint.ipynb
+++ b/src/textflint.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def transform_back(file_path, out_path):\n",
@@ -398,13 +398,17 @@
     "\n",
     "    df = df.rename(columns={\"premise\": \"question\", \"hypothesis\": \"sentence\", \"y\": \"label\"})\n",
     "    \n",
+    "    df['label'] = df['label'].apply(\n",
+    "        lambda x: '0' if x == 'entailment' else '1' if x == 'neutral' else x\n",
+    "    )\n",
+    "    \n",
     "    df.to_csv(out_path)  # \"../data/GLUE_textflint/sst2_dev_textflint.csv\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:31:09.083146Z",
-     "start_time": "2025-01-07T13:31:09.071147Z"
+     "end_time": "2025-01-08T15:54:28.225489Z",
+     "start_time": "2025-01-08T15:54:28.215961Z"
     }
    },
    "id": "4b4a3a5b077b8b9c"
@@ -438,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QNLI/DATA_VAL/trans_Pipeline_SpellingError_Typos_random_5463.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QNLI/qnli_val_textflint.csv')"
@@ -446,18 +450,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:31:45.688517Z",
-     "start_time": "2025-01-07T13:31:45.648876Z"
+     "end_time": "2025-01-08T15:54:30.667432Z",
+     "start_time": "2025-01-08T15:54:30.628620Z"
     }
    },
    "id": "3005357491cee400"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "pd.DataFrame(dataset['validation'])\n",
     "transform_back(\n",
     "    '/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QNLI/DATA_TRAIN/trans_Pipeline_SpellingError_Typos_random_104741.json',\n",
     "    '/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/QNLI/qnli_train_textflint.csv')"
@@ -465,8 +468,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T16:26:11.256541Z",
-     "start_time": "2025-01-07T16:26:10.585054Z"
+     "end_time": "2025-01-08T15:54:43.595500Z",
+     "start_time": "2025-01-08T15:54:43.013625Z"
     }
    },
    "id": "1d4c6df33065b972"
@@ -872,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def transform_back(file_path, out_path):\n",
@@ -888,14 +891,17 @@
     "    df = pd.DataFrame(data)\n",
     "\n",
     "    df = df.rename(columns={\"y\": \"label\"})\n",
+    "    df['label'] = df['label'].apply(\n",
+    "        lambda x: '0' if x == 'entailment' else '2' if x == 'contradiction' else '1' if x == 'neutral' else x\n",
+    "    )\n",
     "\n",
     "    df.to_csv(out_path)  # \"../data/GLUE_textflint/sst2_dev_textflint.csv\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T17:04:38.906866Z",
-     "start_time": "2025-01-07T17:04:38.901142Z"
+     "end_time": "2025-01-08T15:57:32.067926Z",
+     "start_time": "2025-01-08T15:57:32.054445Z"
     }
    },
    "id": "c9e29e4096128e15"
@@ -910,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_TRAIN/trans_Pipeline_SpellingError_Typos_random_391466.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/mnli_train_textflint.csv')"
@@ -918,15 +924,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T17:04:42.511973Z",
-     "start_time": "2025-01-07T17:04:40.638156Z"
+     "end_time": "2025-01-08T15:57:35.664454Z",
+     "start_time": "2025-01-08T15:57:33.945347Z"
     }
    },
    "id": "4f19806064e70c82"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_VAL-MATCHED/trans_Pipeline_SpellingError_Typos_random_9779.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/mnli_val_matched_textflint.csv')"
@@ -934,15 +940,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T17:04:43.959607Z",
-     "start_time": "2025-01-07T17:04:43.909910Z"
+     "end_time": "2025-01-08T15:57:35.707896Z",
+     "start_time": "2025-01-08T15:57:35.665266Z"
     }
    },
    "id": "9140703b951566"
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "transform_back('/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/DATA_VAL-MISMATCHED/trans_Pipeline_SpellingError_Typos_random_9813.json','/Users/anna/Documents/git projects.nosync/StyleTokenizer/data/GLUE_textflint/MNLI/mnli_val_mismatched_textflint.csv')"
@@ -950,8 +956,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-07T17:05:31.901483Z",
-     "start_time": "2025-01-07T17:05:31.839268Z"
+     "end_time": "2025-01-08T15:57:35.750542Z",
+     "start_time": "2025-01-08T15:57:35.707975Z"
     }
    },
    "id": "355714bc4aa6b772"
