--- a/src/CORE.ipynb
+++ b/src/CORE.ipynb
@@ -289,6 +289,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# count duplicates\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a6e341a94c652d1d"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "outputs": [
     {
@@ -482,6 +494,101 @@
    "id": "6be1c99894164fc1"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Count Duplicates"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d97f0cefc81c35f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "train_path = \"/Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/data/eval-corpora/CORE/multiclass_train_stratified.tsv\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-07T10:19:30.569131Z",
+     "start_time": "2025-02-07T10:19:30.561353Z"
+    }
+   },
+   "id": "22e1264849a0769c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# load tsv\n",
+    "df_train = pd.read_csv(train_path, sep='\\t')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-07T10:19:47.352437Z",
+     "start_time": "2025-02-07T10:19:31.444972Z"
+    }
+   },
+   "id": "68d2db7a17c8a1ae"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0        well from the Nazi's, on how to steal other pe...\n1        Cheques made payable to \"SickKids Foundation\" ...\n2        How to make a barometer work: to calibrate, co...\n3        pattern, but I ended up with an extra 20cm or ...\n4        try to be open minded, be honest, and try to e...\n                               ...                        \n29995    discover that when he was saying \"As you wish\"...\n29996    go forth and learn how to shudder, and then I ...\n29997    BlogHer '13: Be a Part of the New Community Pa...\n29998    If u know you gon' be hittin' the club tonight...\n29999    How to keep on top of paperwork Ahh, paperwork...\nName: text, Length: 30000, dtype: object"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train[\"text\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-07T10:20:08.449754Z",
+     "start_time": "2025-02-07T10:20:08.439266Z"
+    }
+   },
+   "id": "770df46fc6ca6fe2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "10"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count the maximum number of times a unique text occurs\n",
+    "df_train[\"text\"].value_counts().max()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-02-07T10:20:34.029878Z",
+     "start_time": "2025-02-07T10:20:34.016944Z"
+    }
+   },
+   "id": "c7fc189e223f2a40"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -489,7 +596,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "9831347a505d9ccd"
+   "id": "d87d42c8d937ef09"
   }
  ],
  "metadata": {
